# ifood-extract

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  ifood_urls_padrao_item_1000.csv  products_output.json  pyproject.toml
crawler/: items.py  middlewares.py  monitors.py  pipelines.py  settings.py
crawler/spiders/: ifood.py
test_history/: round_result_20260619_123506.json  round_result_20260619_133815.json
