[project]
name = "ecommerce-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodolfo Murilo Barbosa Moura",email = "rodolfo8murilo@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
    "scrapy (>=2.14.2,<3.0.0)",
    "spidermon (>=1.24.0,<2.0.0)",
    "seleniumbase (>=4.49.13,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
    "xvfbwrapper (>=0.2.23,<0.3.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "python-xlib (>=0.33,<0.34)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
